# hermes-agent-pwa

./: .gitignore  CLAUDE.md  LICENSE  README.md  TECHNICAL_OVERVIEW.md  pyproject.toml  serve.py
.github/workflows/: release.yml  tests.yml
app/: __init__.py  auth.py  config.py  db.py  events.py  main.py  store.py
app/static/: app.js  index.html  manifest.json  offline.html  styles.css  sw.js
caddy/: Caddyfile.example
hermes_plugin/hap/: adapter.py  hap.json.example  plugin.yaml
scripts/: install.sh
systemd/: hap-gateway.service
tests/: conftest.py  test_auth.py  test_endpoints.py  test_events.py  test_store.py
