[project]
name = "hap"
version = "0.1.0"
description = "Self-hosted gateway for messaging your local Hermes agents from a phone (installable PWA)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # so `import app` resolves from the project root
filterwarnings = [
    # Starlette's TestClient nags about installing httpx2; harmless for us.
    "ignore:Using .httpx. with .starlette.testclient.:Warning",
]
